[FIX] enable connect button in add connection dialog as you type

--- a/SubEthaEdit-Mac/SEEConnectionAddingWindowController.xib
+++ b/SubEthaEdit-Mac/SEEConnectionAddingWindowController.xib
@@ -40,7 +40,11 @@
                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
                         <connections>
-                            <binding destination="-2" name="value" keyPath="self.addressString" id="G9G-qs-4sU"/>
+                            <binding destination="-2" name="value" keyPath="self.addressString" id="dZL-Dh-2CP">
+                                <dictionary key="options">
+                                    <bool key="NSContinuouslyUpdatesValue" value="YES"/>
+                                </dictionary>
+                            </binding>
                         </connections>
                     </textField>
                     <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="QGc-og-ABo">
@@ -49,6 +53,9 @@
                         <buttonCell key="cell" type="squareTextured" title="Connect" bezelStyle="texturedSquare" imagePosition="overlaps" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Txf-qo-a16">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="system"/>
+                            <string key="keyEquivalent" base64-UTF8="YES">
+DQ
+</string>
                         </buttonCell>
                         <connections>
                             <action selector="connect:" target="-2" id="sm3-a0-Xba"/>
