--- a/SubEthaEdit-Mac/German.lproj/WebPreview.xib
+++ b/SubEthaEdit-Mac/German.lproj/WebPreview.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13C64" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4514"/>
     </dependencies>
@@ -119,14 +119,6 @@
                 <outlet property="delegate" destination="-2" id="46"/>
             </connections>
         </window>
-        <view autoresizesSubviews="NO" id="35">
-            <rect key="frame" x="0.0" y="0.0" width="476" height="1"/>
-            <autoresizingMask key="autoresizingMask"/>
-        </view>
-        <view autoresizesSubviews="NO" id="39">
-            <rect key="frame" x="0.0" y="0.0" width="476" height="1"/>
-            <autoresizingMask key="autoresizingMask"/>
-        </view>
     </objects>
     <resources>
         <image name="WebReload" width="9" height="9"/>
