--- a/SubEthaEdit-Mac/English.lproj/MainMenu.xib
+++ b/SubEthaEdit-Mac/English.lproj/MainMenu.xib
@@ -91,12 +91,6 @@
                                     <action selector="openNormalDocument:" target="252" id="654"/>
                                 </connections>
                             </menuItem>
-                            <menuItem title="Open Network…" id="Oid-NA-S13">
-                                <modifierMask key="keyEquivalentModifierMask"/>
-                                <connections>
-                                    <action selector="showDocumentNetworkBrowser:" target="-1" id="TGa-PC-eH4"/>
-                                </connections>
-                            </menuItem>
                             <menuItem title="Open in New Window…" keyEquivalent="o" id="651">
                                 <modifierMask key="keyEquivalentModifierMask" option="YES" command="YES"/>
                                 <connections>
@@ -1028,12 +1022,12 @@
                             <menuItem isSeparatorItem="YES" id="612">
                                 <modifierMask key="keyEquivalentModifierMask" command="YES"/>
                             </menuItem>
-                            <menuItem title="Connections" keyEquivalent="k" id="231">
+                            <menuItem title="Document List" keyEquivalent="k" id="231">
                                 <connections>
                                     <action selector="showDocumentNetworkBrowser:" target="-1" id="exy-BA-bUA"/>
                                 </connections>
                             </menuItem>
-                            <menuItem title="Connections" alternate="YES" keyEquivalent="K" id="640">
+                            <menuItem title="Document List" alternate="YES" keyEquivalent="K" id="640">
                                 <connections>
                                     <action selector="showDocumentNetworkBrowser:" target="-1" id="mvS-D9-2fB"/>
                                 </connections>
@@ -1145,7 +1139,7 @@
             <rect key="screenRect" x="0.0" y="0.0" width="1440" height="878"/>
             <value key="minSize" type="size" width="213" height="107"/>
             <view key="contentView" id="502">
-                <rect key="frame" x="1" y="1" width="488" height="241"/>
+                <rect key="frame" x="0.0" y="0.0" width="488" height="241"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <button verticalHuggingPriority="750" id="503">
@@ -1244,15 +1238,15 @@ DQ
                         <rect key="frame" x="0.0" y="0.0" width="387" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <clipView key="contentView" id="YLv-eZ-yXB">
-                            <rect key="frame" x="0.0" y="0.0" width="372" height="480"/>
-                            <autoresizingMask key="autoresizingMask"/>
+                            <rect key="frame" x="0.0" y="0.0" width="387" height="480"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <textView editable="NO" selectable="NO" importsGraphics="NO" richText="NO" baseWritingDirection="leftToRight" usesRuler="YES" usesFontPanel="YES" verticallyResizable="YES" spellingCorrection="YES" smartInsertDelete="YES" id="590">
-                                    <rect key="frame" x="0.0" y="0.0" width="372" height="1159"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="387" height="1159"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    <size key="minSize" width="372" height="480"/>
+                                    <size key="minSize" width="387" height="480"/>
                                     <size key="maxSize" width="759" height="10000000"/>
                                     <attributedString key="textStorage">
                                         <fragment>
@@ -2075,7 +2069,7 @@ Cg
                                         </fragment>
                                     </attributedString>
                                     <color key="insertionPointColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                                    <size key="minSize" width="372" height="480"/>
+                                    <size key="minSize" width="387" height="480"/>
                                     <size key="maxSize" width="759" height="10000000"/>
                                 </textView>
                             </subviews>
@@ -2086,7 +2080,7 @@ Cg
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                         <scroller key="verticalScroller" verticalHuggingPriority="750" horizontal="NO" id="818">
-                            <rect key="frame" x="372" y="0.0" width="15" height="480"/>
+                            <rect key="frame" x="371" y="0.0" width="16" height="480"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                     </scrollView>
