--- a/SubEthaEdit-Mac/English.lproj/GeneralPrefs.xib
+++ b/SubEthaEdit-Mac/English.lproj/GeneralPrefs.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13C62" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13C64" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <deployment defaultVersion="1090" identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4514"/>
@@ -396,12 +396,18 @@
                                 <popUpButton verticalHuggingPriority="750" id="185">
                                     <rect key="frame" x="185" y="72" width="131" height="22"/>
                                     <autoresizingMask key="autoresizingMask"/>
-                                    <popUpButtonCell key="cell" type="push" title="10" bezelStyle="rounded" alignment="left" controlSize="small" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" tag="10" inset="2" arrowPosition="arrowAtCenter" preferredEdge="maxY" selectedItem="188" id="231">
+                                    <popUpButtonCell key="cell" type="push" bezelStyle="rounded" alignment="left" controlSize="small" lineBreakMode="truncatingTail" borderStyle="borderAndBezel" inset="2" arrowPosition="arrowAtCenter" preferredEdge="maxY" id="231">
                                         <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
                                         <font key="font" metaFont="smallSystem"/>
                                         <menu key="menu" title="OtherViews" id="186">
                                             <items>
-                                                <menuItem title="10" state="on" tag="10" id="188"/>
+                                                <menuItem title="None" id="zSI-bj-Ccp">
+                                                    <modifierMask key="keyEquivalentModifierMask"/>
+                                                </menuItem>
+                                                <menuItem title="5" tag="5" id="7zS-wi-KIB">
+                                                    <modifierMask key="keyEquivalentModifierMask"/>
+                                                </menuItem>
+                                                <menuItem title="10" tag="10" id="188"/>
                                                 <menuItem title="15" tag="15" id="189"/>
                                                 <menuItem title="20" tag="20" id="187"/>
                                                 <menuItem title="30" tag="30" id="190"/>
@@ -410,7 +416,7 @@
                                         </menu>
                                     </popUpButtonCell>
                                     <connections>
-                                        <binding destination="92" name="selectedTag" keyPath="values.NSRecentDocumentsLimit" id="192"/>
+                                        <binding destination="8xq-UR-Csw" name="selectedTag" keyPath="values.NSRecentDocumentsLimit" id="wy9-0R-V7s"/>
                                     </connections>
                                 </popUpButton>
                                 <textField verticalHuggingPriority="750" id="193">
@@ -464,5 +470,6 @@
                 </menuItem>
             </items>
         </menu>
+        <userDefaultsController representsSharedInstance="YES" id="8xq-UR-Csw"/>
     </objects>
 </document>
