--- a/SubEthaEdit-Mac/German.lproj/MainMenu.xib
+++ b/SubEthaEdit-Mac/German.lproj/MainMenu.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13C64" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13D12" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <deployment defaultVersion="1090" identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4514"/>
@@ -1012,12 +1012,12 @@
                             </menuItem>
                             <menuItem title="Dokumentenliste" keyEquivalent="k" id="231">
                                 <connections>
-                                    <action selector="showDocumentNetworkBrowser:" target="-1" id="R98-fO-Mtn"/>
+                                    <action selector="showDocumentListWindow:" target="-1" id="pke-WH-h1u"/>
                                 </connections>
                             </menuItem>
                             <menuItem title="Dokumentenliste" alternate="YES" keyEquivalent="K" id="640">
                                 <connections>
-                                    <action selector="showDocumentNetworkBrowser:" target="-1" id="SD6-GI-jcD"/>
+                                    <action selector="showDocumentListWindow:" target="-1" id="xCk-SD-luM"/>
                                 </connections>
                             </menuItem>
                             <menuItem title="Statistik" keyEquivalent="i" id="635">
