--- a/SubEthaEdit-Mac/PlainTextEditor.xib
+++ b/SubEthaEdit-Mac/PlainTextEditor.xib
@@ -157,6 +157,7 @@
                             <connections>
                                 <action selector="toggleIsAnnounced:" target="-1" id="IJN-40-Y5s"/>
                                 <binding destination="UOY-gY-y9M" name="alternateImage" keyPath="selection.alternateAnnounceImage" id="uCe-pm-U4H"/>
+                                <binding destination="UOY-gY-y9M" name="enabled" keyPath="selection.canAnnounceAndShare" id="KZE-0T-PPN"/>
                                 <outlet property="menu" destination="eH3-RU-uKl" id="H3t-Aa-F1C"/>
                             </connections>
                         </button>
@@ -197,6 +198,7 @@
                             </buttonCell>
                             <connections>
                                 <action selector="inviteUsersToDocumentViaSharingService:" target="-1" id="Wdv-mH-git"/>
+                                <binding destination="UOY-gY-y9M" name="enabled" keyPath="selection.canAnnounceAndShare" id="pYl-6X-ILh"/>
                             </connections>
                         </button>
                         <textField toolTip="Window width and wrap settings" verticalHuggingPriority="750" id="15" customClass="BorderedTextField">
