--- a/SubEthaEdit-Mac/English.lproj/MainMenu.xib
+++ b/SubEthaEdit-Mac/English.lproj/MainMenu.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13D12" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5053" systemVersion="13C64" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <deployment defaultVersion="1090" identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4514"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="5053"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="NSApplication">
@@ -1035,14 +1035,6 @@
                             <menuItem title="User Statistics" keyEquivalent="i" id="635">
                                 <connections>
                                     <action selector="showUserStatisticsWindow:" target="210" id="636"/>
-                                </connections>
-                            </menuItem>
-                            <menuItem isSeparatorItem="YES" id="233">
-                                <modifierMask key="keyEquivalentModifierMask" command="YES"/>
-                            </menuItem>
-                            <menuItem title="Style Sheet Editor" id="Tyd-a7-5Hp">
-                                <connections>
-                                    <action selector="showStyleSheetEditorWindow:" target="210" id="emv-HG-wQa"/>
                                 </connections>
                             </menuItem>
                             <menuItem isSeparatorItem="YES" id="k0I-fL-5QT">
