--- a/SubEthaEdit-Mac/English.lproj/MainMenu.xib
+++ b/SubEthaEdit-Mac/English.lproj/MainMenu.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5053" systemVersion="13C64" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5053" systemVersion="13D17" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <deployment defaultVersion="1090" identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="5053"/>
@@ -818,7 +818,7 @@
                             </menuItem>
                             <menuItem title="Show Web Preview" keyEquivalent="r" id="459">
                                 <connections>
-                                    <action selector="showWebPreview:" target="-1" id="462"/>
+                                    <action selector="toggleWebPreview:" target="-1" id="naU-EL-THK"/>
                                 </connections>
                             </menuItem>
                             <menuItem title="Refresh Web Preview" keyEquivalent="R" id="460">
